5/8 test de controllers funcionales